[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/enemies/ShootEnemy1Attack.png" type="Texture" id=1]
[ext_resource path="res://entities/ShootEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/ShootEnemy1Moving.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/ShootEnemy2Attack.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/ShootEnemy2Moving.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 9.0
height = 18.0

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.2

[node name="ShootEnemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 31
collision/safe_margin = 5.0
script = ExtResource( 2 )

[node name="regularAttackSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 5 )
frame = 1
playing = true

[node name="regularMoveSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 13 )
frame = 5
playing = true

[node name="shotgunAttackSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 16 )
playing = true

[node name="shotgunMoveSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 23 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 2 )

[node name="checkPlayerVisible" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 150, 0 )
collision_mask = 5

[node name="shotPosition" type="Position2D" parent="."]
position = Vector2( 10, -1 )

[node name="shotCooldown" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
